# todo-app

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  build.py  build.sh
.github/workflows/: ci.yml  release.yml
docs/: todo_app_uml.md
include/: todo_item.hpp  todo_list.hpp
src/: main.cpp  todo_list.cpp
tests/: test_todo.cpp
